--- a/testeSoma/nbproject/project.properties
+++ b/testeSoma/nbproject/project.properties
@@ -27,29 +27,27 @@ dist.dir=dist
 dist.jar=${dist.dir}/testeSoma.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.byte-buddy-1.8.15.jar=..\\selenium lib\\libs\\byte-buddy-1.8.15.jar
-file.reference.client-combined-3.141.59-sources.jar=..\\selenium lib\\client-combined-3.141.59-sources.jar
-file.reference.client-combined-3.141.59.jar=..\\selenium lib\\client-combined-3.141.59.jar
-file.reference.commons-exec-1.3.jar=..\\selenium lib\\libs\\commons-exec-1.3.jar
-file.reference.guava-25.0-jre.jar=..\\selenium lib\\libs\\guava-25.0-jre.jar
-file.reference.hamcrest-2.2.jar=..\\hamcrest-2.2.jar
-file.reference.junit-4.13-rc-2.jar=..\\junit-4.13-rc-2.jar
-file.reference.junit-4.13-rc-2_original.jar=..\\junit-4.13-rc-2 original.jar
-file.reference.okhttp-3.11.0.jar=..\\selenium lib\\libs\\okhttp-3.11.0.jar
-file.reference.okio-1.14.0.jar=..\\selenium lib\\libs\\okio-1.14.0.jar
+file.reference.byte-buddy-1.8.15.jar=..\\biblioteca para teste\\selenium lib\\libs\\byte-buddy-1.8.15.jar
+file.reference.client-combined-3.141.59-sources.jar=..\\biblioteca para teste\\selenium lib\\client-combined-3.141.59-sources.jar
+file.reference.client-combined-3.141.59.jar=..\\biblioteca para teste\\selenium lib\\client-combined-3.141.59.jar
+file.reference.commons-exec-1.3.jar=..\\biblioteca para teste\\selenium lib\\libs\\commons-exec-1.3.jar
+file.reference.guava-25.0-jre.jar=..\\biblioteca para teste\\selenium lib\\libs\\guava-25.0-jre.jar
+file.reference.hamcrest-2.2.jar=..\\biblioteca para teste\\hamcrest-2.2.jar
+file.reference.junit-4.13-rc-2.jar=..\\biblioteca para teste\\junit-4.13-rc-2.jar
+file.reference.okhttp-3.11.0.jar=..\\biblioteca para teste\\selenium lib\\libs\\okhttp-3.11.0.jar
+file.reference.okio-1.14.0.jar=..\\biblioteca para teste\\selenium lib\\libs\\okio-1.14.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
+    ${file.reference.hamcrest-2.2.jar}:\
     ${file.reference.junit-4.13-rc-2.jar}:\
-    ${file.reference.junit-4.13-rc-2_original.jar}:\
     ${file.reference.client-combined-3.141.59-sources.jar}:\
     ${file.reference.client-combined-3.141.59.jar}:\
     ${file.reference.byte-buddy-1.8.15.jar}:\
     ${file.reference.commons-exec-1.3.jar}:\
     ${file.reference.guava-25.0-jre.jar}:\
     ${file.reference.okhttp-3.11.0.jar}:\
-    ${file.reference.okio-1.14.0.jar}:\
-    ${file.reference.hamcrest-2.2.jar}
+    ${file.reference.okio-1.14.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
