--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@
 /testeFuncionalSomarParcelas/nbproject/private/
 /testeFuncionalSomarParcelas/build/
 /testeSoma/nbproject/private/
+/testeSoma/build/
