--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,15 @@
 /testeFuncionalSomarParcelas/build/
 /testeSoma/nbproject/private/
 /testeSoma/build/
+/javateste/nbproject/private/
+/javateste/build/
+/testeFormulario/nbproject/private/
+/testeFormulario/build/
+/javaTesteSoma/nbproject/private/
+/javaTesteSoma/build/
+/TiposGenericos/nbproject/private/
+/TiposGenericos/build/
+/semana1/nbproject/private/
+/semana1/build/
+/testesemana1/nbproject/private/
+/testesemana1/build/
