--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,8 @@
 /semana1/build/
 /testesemana1/nbproject/private/
 /testesemana1/build/
+/Contador/nbproject/private/
+/contador2/nbproject/private/
+/contador2/build/
+/OraculoMVC/nbproject/private/
+/OraculoMVC/build/
