--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,8 @@
 /.metadata/
 /Srmana2/nbproject/private/
 /Srmana2/build/
+/Semana4/nbproject/private/
+/Semana4/build/
+/semana4/nbproject/private/
+/testeSemana1Novo/nbproject/private/
+/testeSemana1Novo/build/
